<resources>
    <string name="app_name" translatable="false">Voxiter</string>
    <string name="reveal_letter_menu_option">Reveal letter</string>
    <string name="reveal_word_menu_option">Reveal word</string>
    <string name="reveal_puzzle_menu_option">Reveal puzzle</string>
    <string name="check_letter_menu_option">Check letter</string>
    <string name="check_word_menu_option">Check word</string>
    <string name="check_word_always_menu_option">Check word automatically</string>
    <string name="select_verb_types">Select types of verbs</string>
    <string name="select_verb_forms">Select verb forms to study</string>
    <string name="other_settings">Verb Set and Conjugations</string>
    <string name="continue_to_next_screen">Continue</string>
    <string name="select_verb_set">Select Verb Set</string>
    <string name="full_or_individual_conjugations">Select Full or Individual Conjugation</string>
    <string name="home_button">Home</string>
    <string name="settings_button">Settings</string>
    <string name="travel_button">Travel</string>
    <string name="language_button">Language</string>
    <string name="crossword_button">Crossword</string>
    <string name="wordsearch_button">Word Search</string>
    <string name="learn_and_review_button">Learn Vocab</string>
    <string name="review_button">Review Vocab</string>
    <string name="test_button">Test</string>
    <string name="verb_conjugations_button">Verb Conjugations</string>
    <string name="quick_button">Setup Quick-Access Button</string>
    <string name="empty" translatable="false"></string>
    <string name="select_crossword_size">Select Crossword Grid Size</string>
    <string name="the_correct_answer_is">The correct answer is: </string>
    <string name="you_were_right">You were correct!</string>
    <string name="hint_button">Click to start!</string>
    <string name="recommended_verb_forms">Recommended Verb Forms</string>
    <string name="indicative_tenses">Indicative Tenses</string>
    <string name="present">Present</string>
    <string name="imperfect">Imperfect</string>
    <string name="preterite">Preterite</string>
    <string name="simple_pluperfect">Simple Pluperfect</string>
    <string name="future">Future</string>
    <string name="conditional">Conditional</string>
    <string name="perfect_compound_tenses">Perfect (Compound) Tenses</string>
    <string name="present_perfect">Present Perfect</string>
    <string name="pluperfect">Pluperfect</string>
    <string name="future_perfect">Future Perfect</string>
    <string name="conditional_perfect">Conditional Perfect</string>
    <string name="progressive_tenses">Progressive Tenses</string>
    <string name="present_progressive">Present Progressive</string>
    <string name="imperfect_progressive">Imperfect Progressive</string>
    <string name="preterite_progressive">Preterite Progressive</string>
    <string name="simple_pluperfect_progressive">Simple Pluperfect Progressive</string>
    <string name="future_progressive">Future Progressive</string>
    <string name="conditional_progressive">Conditional Progressive</string>
    <string name="present_perfect_progressive">Present Perfect Progressive</string>
    <string name="pluperfect_progressive">Pluperfect Progressive</string>
    <string name="future_perfect_progressive">Future Perfect Progressive</string>
    <string name="conditional_perfect_progressive">Conditional Perfect Progressive</string>
    <string name="subjuctive">Subjunctive</string>
    <string name="present_subjunctive">Present Subjunctive</string>
    <string name="imperfect_subjunctive">Imperfect Subjunctive</string>
    <string name="future_subjunctive">Future Subjunctive</string>
    <string name="present_perfect_subjunctive">Present Perfect Subjunctive</string>
    <string name="pluperfect_subjunctive">Pluperfect Subjunctive</string>
    <string name="future_perfect_subjunctive">Future Perfect Subjunctive</string>
    <string name="other_options">Other Options</string>
    <string name="commands">Commands (Imperatives)</string>
    <string name="personal_infinitive">Personal Infinitives</string>
    <string name="gerunds">Gerunds</string>
    <string name="past_participle">Past Participle</string>
    <string name="regular_ar" translatable="false">Regular -ar</string>
    <string name="regular_er" translatable="false">Regular -er</string>
    <string name="regular_ir" translatable="false">Regular -ir</string>
    <string name="irregular">Irregular</string>
    <string name="reflexive">Reflexive</string>
    <string name="biggest_struggles">Biggest struggles</string>
    <string name="ten_most_common">10 most common verbs</string>
    <string name="twenty_most_common">20 most common verbs</string>
    <string name="fifty_most_common">50 most common verbs</string>
    <string name="hundred_most_common">100 most common verbs</string>
    <string name="all_seen">All studied verbs</string>
    <string name="all_verbs">All verbs</string>
    <string name="full_conjugation">Full conjugation</string>
    <string name="individual_conjugations">Individual conjugation</string>
    <string name="verb_label">Verb:</string>
    <string name="verb_form_label">Verb Form:</string>
    <string name="person_label">Person:</string>
    <string name="go_to_next_verb">Go to next verb</string>
    <string name="go_to_prev_verb">Go to previous verb</string>
    <string name="sing_or_plur_label">Singular or Plural:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="size5x5">5x5</string>
    <string name="size7x7">7x7</string>
    <string name="size9x9">9x9</string>
    <string name="size11x11">11x11</string>
    <string name="size13x13">13x13</string>
    <string name="size15x15">15x15</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_quick_access_button">Quick-Access Button</string>
    <string-array name="pref_quick_access_button_list_titles">
        
        <item>Verb Conjugation</item>
        <item>Crossword</item>
        <item>Test</item>
        <item>Learn Vocab</item>
        
    </string-array>
    <string-array name="pref_quick_access_button_list_values">
        
        <item>verb</item>
        <item>crossword</item>
        <item>test</item>
        <item>learn</item>
        
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_header_travel">Travel</string>
    <string name="pref_title_country_travel">Country you are travelling to</string>
    <string-array name="pref_countries_titles">
        <item>Portugal</item>
        <item>France</item>
        <item>Brazil</item>
    </string-array>
    <string-array name="pref_countries_values">
        <item>Portugal</item>
        <item>France</item>
        <item>Brazil</item>
    </string-array>
    <string name="puzzle_menu_title">Crossword</string>
    <string name="pref_header_puzzle">Crossword</string>
    <string name="pref_title_crossword_size">Default crossword grid size</string>
    <string name="pref_header_learn_and_review">Learn and Review</string>
    <string name="pref_header_verb_conjugations">Verb Conjugations</string>
    <string name="indicative_tense_summary">This indicative tense will appear in crosswords</string>
    <string name="perfect_tense_summary">This perfect/compound tense will appear in crosswords</string>
    <string name="progressive_tense_summary">This progressive tense will appear in crosswords</string>
    <string name="subjunctive_tense_summary">This subjunctive tense will appear in crosswords</string>
    <string name="present_switch">Enable present tense</string>
    <string name="preterite_switch">Enable preterite tense</string>
    <string name="imperfect_switch">Enable imperfect tense</string>
    <string name="simple_pluperfect_switch">Enable simple pluperfect tense</string>
    <string name="future_switch">Enable future tense</string>
    <string name="conditional_switch">Enable conditional tense</string>
    <string name="present_perfect_switch">Enable present perfect tense</string>
    <string name="pluperfect_switch">Enable pluperfect tense</string>
    <string name="future_perfect_switch">Enable future perfect tense</string>
    <string name="conditional_perfect_switch">Enable imperfect tense</string>
    <string name="present_progressive_switch">Enable present progressive tense</string>
    <string name="preterite_progressive_switch">Enable preterite progressive tense</string>
    <string name="imperfect_progressive_switch">Enable imperfect progressive tense</string>
    <string name="simple_pluperfect_progressive_switch">Enable simple pluperfect progressive tense</string>
    <string name="future_progressive_switch">Enable future progressive tense</string>
    <string name="conditional_progressive_switch">Enable conditional progressive tense</string>
    <string name="present_perfect_progressive_switch">Enable present perfect progressive tense</string>
    <string name="pluperfect_progressive_switch">Enable pluperfect progressive tense</string>
    <string name="future_perfect_progressive_switch">Enable future perfect progressive tense</string>
    <string name="conditional_perfect_progressive_switch">Enable conditional perfect progressive tense</string>
    <string name="present_subjunctive_switch">Enable present tense</string>
    <string name="present_perfect_subjunctive_switch">Enable present perfect tense</string>
    <string name="imperfect_subjunctive_switch">Enable imperfect tense</string>
    <string name="pluperfect_subjunctive_switch">Enable pluperfect tense</string>
    <string name="future_subjunctive_switch">Enable future tense</string>
    <string name="future_perfect_subjunctive_switch">Enable future perfect tense</string>
</resources>