<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="9"
        android:entries="@array/pref_title_crossword_size_titles"
        android:entryValues="@array/pref_title_crossword_size_values"
        android:key="crossword_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_crossword_size"/>

    <ListPreference
        android:defaultValue="9"
        android:entries="@array/pref_title_wordsearch_size_titles"
        android:entryValues="@array/pref_title_wordsearch_size_values"
        android:key="wordsearch_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_wordsearch_size"/>


    <SwitchPreference
        android:defaultValue="true"
        android:key="present"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/present_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="preterite"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/preterite_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="imperfect"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/imperfect_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="simple_pluperfect"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/simple_pluperfect_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="future"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/future_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="conditional"
        android:summary="@string/indicative_tense_summary"
        android:title="@string/conditional_switch"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="present_perfect"
        android:summary="@string/perfect_tense_summary"
        android:title="@string/present_perfect_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pluperfect"
        android:summary="@string/perfect_tense_summary"
        android:title="@string/pluperfect_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="future_perfect"
        android:summary="@string/perfect_tense_summary"
        android:title="@string/future_perfect_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="conditional_perfect"
        android:summary="@string/perfect_tense_summary"
        android:title="@string/conditional_perfect_switch"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="present_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/present_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="preterite_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/preterite_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="imperfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/imperfect_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="simple_pluperfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/simple_pluperfect_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="future_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/future_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="conditional_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/conditional_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="present_perfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/present_perfect_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="pluperfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/pluperfect_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="future_perfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/future_perfect_progressive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="conditional_perfect_progressive"
        android:summary="@string/progressive_tense_summary"
        android:title="@string/conditional_perfect_progressive_switch"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="present_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/present_subjunctive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="present_perfect_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/present_perfect_subjunctive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="imperfect_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/imperfect_subjunctive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="pluperfect_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/pluperfect_subjunctive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="future_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/future_subjunctive_switch"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="future_perfect_subjunctive"
        android:summary="@string/subjunctive_tense_summary"
        android:title="@string/future_perfect_subjunctive_switch"/>

</PreferenceScreen>
