<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_button" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_travel"
            android:title="@string/travel_button" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language_button" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_button" />
    </group>

    <item android:title="@string/language_button">
        <menu>
            <item
                android:id="@+id/nav_learn_and_review"
                android:icon="@drawable/ic_learn_and_review"
                android:title="@string/learn_and_review_button" />
            <item
                android:id="@+id/nav_conjugation_practice"
                android:icon="@drawable/ic_conjugation_practice"
                android:title="@string/verb_conjugations_button" />
            <item
                android:id="@+id/nav_crossword"
                android:icon="@drawable/ic_crossword"
                android:title="@string/crossword_button" />
            <item
                android:id="@+id/nav_wordsearch"
                android:icon="@drawable/ic_wordsearch"
                android:title="@string/wordsearch_button" />
        </menu>
    </item>

</menu>
