<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/verbFormsScrollView"

    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/recommended_verb_forms"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/verbFormsSlider"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_span="2"
                android:max="5"
                android:progress="0" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/indicative_tenses"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present" />

            <CheckBox
                android:id="@+id/impeIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/imperfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/pretIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/preterite" />

            <CheckBox
                android:id="@+id/plupIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/simple_pluperfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future" />

            <CheckBox
                android:id="@+id/condIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/conditional" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/perfect_compound_tenses"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presPerfCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present_perfect" />

            <CheckBox
                android:id="@+id/plupPerfCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/pluperfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuPerfCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future_perfect" />

            <CheckBox
                android:id="@+id/condPerfCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/conditional_perfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/progressive_tenses"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present_progressive" />

            <CheckBox
                android:id="@+id/impeProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/imperfect_progressive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/pretProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/preterite_progressive" />

            <CheckBox
                android:id="@+id/simpPlupProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/simple_pluperfect_progressive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future_progressive" />

            <CheckBox
                android:id="@+id/condProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/conditional_progressive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presPerfProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present_perfect_progressive" />

            <CheckBox
                android:id="@+id/plupProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/pluperfect_progressive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuPerfProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future_perfect_progressive" />

            <CheckBox
                android:id="@+id/condPerfProgCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/conditional_perfect_progressive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/subjuctive"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present_subjunctive" />

            <CheckBox
                android:id="@+id/impeSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/imperfect_subjunctive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future_subjunctive" />

            <CheckBox
                android:id="@+id/presPerfSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/present_perfect_subjunctive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/plupSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/pluperfect_subjunctive" />

            <CheckBox
                android:id="@+id/futuPerfSubjCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/future_perfect_subjunctive" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_span="2"
                android:text="@string/other_options"
                android:textColor="@color/colorDefaultBlack"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/pastPartCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/past_participle" />

            <CheckBox
                android:id="@+id/commandsCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/commands" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/personalInfinitiveCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/personal_infinitive" />

            <CheckBox
                android:id="@+id/gerundCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"


                android:text="@string/gerunds" />
        </TableRow>

    </TableLayout>
</ScrollView>
